--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>HARPER - Home</title>
+    <link href="https://fonts.googleapis.com/css?family=Cabin|Oswald:700" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
+    <header class="header">
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item"><a href="" class="nav__link--active">Home</a></li>
+                <li class="nav__item"><a href="" class="nav__link">About</a></li>
+                <li class="nav__item"><a href="" class="nav__link"><h2 class="header2">Harper</h2></a></li>
+                <li class="nav__item"><a href="" class="nav__link">Blog</a></li>
+                <li class="nav__item"><a href="" class="nav__link">Contact</a></li>
+            </ul>
+        </nav>
+        <div>
+            <h1 class="header1--main">Harper</h1>
+        </div>
+        <div>
+            <img src="./img/home-image-1-b.jpg" alt="Overhead photo of girl lying among balloons">
+        </div>
+
+    </header>
     
 </body>
 </html>
