Homepage header completed

--- a/index.html
+++ b/index.html
@@ -19,14 +19,22 @@
                 <li class="nav__item"><a href="" class="nav__link">Contact</a></li>
             </ul>
         </nav>
-        <div>
-            <h1 class="header1--main">Harper</h1>
+        <div class="header__container1 wrapper">
+            <div class="header__text-container">
+                <h1 class="header1--main">Harper</h1>
+            </div>
         </div>
-        <div>
-            <img src="./img/home-image-1-b.jpg" alt="Overhead photo of girl lying among balloons">
+        <div class="header__container2 wrapper">
+            <div class="header__img-container">
+                <img src="./img/home-image-1-b.jpg" alt="Overhead photo of girl lying among balloons" class="header-img">
+            </div>
         </div>
-
     </header>
+    <main>
+        <section>
+
+        </section>
+    </main>
     
 </body>
 </html>
