Refactored the header code and completed it

--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
         </nav>
         <div class="header__container1 wrapper">
             <div class="header__text-container">
-                <h1 class="header1--main">Harper</h1>
+                <h1 class=" header1 header1--main">Harper</h1>
             </div>
         </div>
         <div class="header__container2 wrapper">
             <div class="header__img-container">
-                <img src="./img/home-image-1-b.jpg" alt="Overhead photo of girl lying among balloons" class="header-img">
             </div>
         </div>
     </header>
