Completed 2 sections in the main

--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HARPER - Home</title>
     <link href="https://fonts.googleapis.com/css?family=Cabin|Oswald:700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
+
 <body>
     <header class="header">
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="" class="nav__link--active">Home</a></li>
                 <li class="nav__item"><a href="" class="nav__link">About</a></li>
-                <li class="nav__item"><a href="" class="nav__link"><h2 class="header2">Harper</h2></a></li>
+                <li class="nav__item"><a href="" class="nav__link">
+                        <h2 class="font2--nav">Harper</h2>
+                    </a></li>
                 <li class="nav__item"><a href="" class="nav__link">Blog</a></li>
                 <li class="nav__item"><a href="" class="nav__link">Contact</a></li>
             </ul>
         </nav>
         <div class="header__container1 wrapper">
             <div class="header__text-container">
-                <h1 class=" header1 header1--main">Harper</h1>
+                <h1 class="font1 font1--main">Harper</h1>
             </div>
         </div>
         <div class="header__container2 wrapper">
@@ -30,10 +36,45 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="section whoisharper">
+            <div class="whoisharper__container wrapper">
+                <div class="whoisharper__text-container">
+                    <h2 class="font2">Who's Harper</h2>
+                    <p class="section__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam expedita
+                        obcaecati blanditiis. Sit ullam aut praesentium optio et ducimus libero quos aliquid odio cum.
+                        Temporibus corrupti maxime voluptates, neque nemo excepturi suscipit laudantium officiis?</p>
+                    <a href="#" class="section__btn">Find Out More</a>
+                </div>
+            </div>
+        </section>
+        <section class="building-pic">
+        </section>
+        <section class="section icon-links">
+            <div class="icon-links__container wrapper">
+                <!-- <div class="icon-links__icon-container">
+                    <i class="fas fa-image"></i>
+                </div> -->
+                <div class="icon-links__text-Container">
+                    <h3 class="font3">Photos</h3>
+                    <p class="section__text">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta, est magnam. Aliquid, optio? Qui minus quae tempora explicabo tenetur obcaecati. Debitis obcaecati id consequatur ullam ipsa.
+                    </p>
+                </div>
+                <!-- <div class="icon-links__icon-container">
+                    <i class="fas fa-user-alt"></i>
+                </div> -->
+                <div class="icon-links__text-Container">
+                    <h3 class="font3">About</h3>
+                    <p class="section__text">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta, est magnam. Aliquid, optio? Qui minus quae tempora explicabo tenetur obcaecati. Debitis obcaecati id consequatur ullam ipsa.
+                    </p>
+                </div>
 
+
+            </div>
         </section>
     </main>
-    
+
 </body>
+
 </html>
