Completed 3 sections on home page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="whoisharper__container wrapper">
                 <div class="whoisharper__text-container">
                     <h2 class="font2">Who's Harper</h2>
-                    <p class="section__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam expedita
+                    <p class="section__text">Lorem ipsum dolor sit amet consectetur, adip elit. Veniam expedita
                         obcaecati blanditiis. Sit ullam aut praesentium optio et ducimus libero quos aliquid odio cum.
                         Temporibus corrupti maxime voluptates, neque nemo excepturi suscipit laudantium officiis?</p>
                     <a href="#" class="section__btn">Find Out More</a>
@@ -49,28 +49,79 @@
         </section>
         <section class="building-pic">
         </section>
-        <section class="section icon-links">
-            <div class="icon-links__container wrapper">
-                <!-- <div class="icon-links__icon-container">
-                    <i class="fas fa-image"></i>
-                </div> -->
-                <div class="icon-links__text-Container">
-                    <h3 class="font3">Photos</h3>
-                    <p class="section__text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta, est magnam. Aliquid, optio? Qui minus quae tempora explicabo tenetur obcaecati. Debitis obcaecati id consequatur ullam ipsa.
-                    </p>
+        <section class="section icon-sec">
+            <div class="wrapper icon-sec__block">
+                <div class="icon-sec__container">
+                    <div class="icon-sec__icon-container">
+                        <a href="#photos" class="icon-sec__link">
+                            <span class="icon-sec__icon icon-sec__icon--photos"></span>
+                        </a>
+                    </div>
+                    <div class="icon-sec__text-Container">
+                        <a href="#photos">
+                            <h3 class="font3">Photos</h3>
+                        </a>
+                        <p class="section__text">
+                            Lorem ipsum dolor sit, amet consectetur adip elit. Soluta, est magnam. Aliquid, optio?
+                            Qui minus quae tempora explicabo tenetur obcaecati. Debitis obcaecati id consequatur ullam
+                            ipsa.
+                        </p>
+                    </div>
                 </div>
-                <!-- <div class="icon-links__icon-container">
-                    <i class="fas fa-user-alt"></i>
-                </div> -->
-                <div class="icon-links__text-Container">
-                    <h3 class="font3">About</h3>
-                    <p class="section__text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta, est magnam. Aliquid, optio? Qui minus quae tempora explicabo tenetur obcaecati. Debitis obcaecati id consequatur ullam ipsa.
-                    </p>
+                <div class="icon-sec__container"> 
+                    <div class="icon-sec__icon-container">
+                        <a href="#about" class="icon-sec__link">
+                            <span class="icon-sec__icon icon-sec__icon--about"></span>
+                        </a>
+                    </div>
+                    <div class="icon-sec__text-Container">
+                        <a href="#about">
+                            <h3 class="font3">About</h3>
+                        </a>
+                        <p class="section__text">
+                            Lorem ipsum dolor sit, amet consectetur adip elit. Soluta, est magnam. Aliquid, optio?
+                            Qui minus quae tempora explicabo tenetur obcaecati. Debitis obcaecati id consequatur ullam
+                            ipsa.
+                        </p>
+                    </div>
                 </div>
-
-
+            </div>
+            
+            <div class="wrapper icon-sec__block">
+                <div class="icon-sec__container">
+                    <div class="icon-sec__icon-container">
+                        <a href="#blog" class="icon-sec__link">
+                            <span class="icon-sec__icon icon-sec__icon--blog"></span>
+                        </a>
+                    </div>
+                    <div class="icon-sec__text-Container">
+                        <a href="#blog">
+                            <h3 class="font3">blog</h3>
+                        </a>
+                        <p class="section__text">
+                            Lorem ipsum dolor sit, amet consectetur adip elit. Soluta, est magnam. Aliquid, optio?
+                            Qui minus quae tempora explicabo tenetur obcaecati. Debitis obcaecati id consequatur ullam
+                            ipsa.
+                        </p>
+                    </div>
+                </div>
+                <div class="icon-sec__container"> 
+                    <div class="icon-sec__icon-container">
+                        <a href="#contat" class="icon-sec__link">
+                            <span class="icon-sec__icon icon-sec__icon--contact"></span>
+                        </a>
+                    </div>
+                    <div class="icon-sec__text-Container">
+                        <a href="#contact">
+                            <h3 class="font3">Contact Me</h3>
+                        </a>
+                        <p class="section__text">
+                            Lorem ipsum dolor sit, amet consectetur adip elit. Soluta, est magnam. Aliquid, optio?
+                            Qui minus quae tempora explicabo tenetur obcaecati. Debitis obcaecati id consequatur ullam
+                            ipsa.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
