Completed 4 sections on home page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="header">
-        <nav class="nav">
+        <nav class="nav wrapper">
             <ul class="nav__list">
                 <li class="nav__item"><a href="" class="nav__link--active">Home</a></li>
                 <li class="nav__item"><a href="" class="nav__link">About</a></li>
@@ -68,7 +68,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="icon-sec__container"> 
+                <div class="icon-sec__container">
                     <div class="icon-sec__icon-container">
                         <a href="#about" class="icon-sec__link">
                             <span class="icon-sec__icon icon-sec__icon--about"></span>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="wrapper icon-sec__block">
                 <div class="icon-sec__container">
                     <div class="icon-sec__icon-container">
@@ -105,7 +105,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="icon-sec__container"> 
+                <div class="icon-sec__container">
                     <div class="icon-sec__icon-container">
                         <a href="#contat" class="icon-sec__link">
                             <span class="icon-sec__icon icon-sec__icon--contact"></span>
@@ -123,6 +123,39 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="section blog-preview">
+            <div class="wrapper blog-preview__block">
+                <div class="blog-preview__container-1">
+                    <img src="./img/home-image-3.jpg" alt="" class="blog-preview__img-1">
+                </div>
+                <div class="blog-preview__container-2 blog-preview__container-2--text">
+                    <h3 class="font3">Harper's Travels</h3>
+                    <p class="section__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nemo et
+                        tenetur facere ipsam vitae similique beatae, odio distinctio veniam corporis? Possimus
+                        aspernatur fuga mollitia debitis blanditiis voluptatibus voluptates quisquam repellat
+                        perspiciatis recusandae. Iure!</p>
+                    <a href="#" class="section__btn">Read More</a>
+
+                </div>
+
+            </div>
+            <div class="wrapper blog-preview__block">
+                <div class="blog-preview__container-1 blog-preview__container-1--text">
+                    <h3 class="font3">Harper's Travels</h3>
+                    <p class="section__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nemo et
+                        tenetur facere ipsam vitae similique beatae, odio distinctio veniam corporis? Possimus
+                        aspernatur fuga mollitia debitis blanditiis voluptatibus voluptates quisquam repellat
+                        perspiciatis recusandae. Iure!</p>
+                    <a href="#" class="section__btn">Read More</a>
+                </div>
+                <div class="blog-preview__container-2">
+                    <img src="./img/home-image-4.jpg" alt="" class="blog-preview__img-2">
+                </div>
+            </div>
+        </section>
+        <section class="section harperjourney">
+
         </section>
     </main>
 
