Refactored section 4 sections on home page and modified the nav bar

--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
             <div class="wrapper blog-preview__block">
                 <div class="blog-preview__container-1">
                     <img src="./img/home-image-3.jpg" alt="" class="blog-preview__img-1">
+                    <!-- <div class="blog-preview__img-1">
+
+                    </div> -->
                 </div>
                 <div class="blog-preview__container-2 blog-preview__container-2--text">
                     <h3 class="font3">Harper's Travels</h3>
@@ -142,12 +145,14 @@
             </div>
             <div class="wrapper blog-preview__block">
                 <div class="blog-preview__container-1 blog-preview__container-1--text">
-                    <h3 class="font3">Harper's Travels</h3>
+                    <h3 class="font3">Favourite Things</h3>
                     <p class="section__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nemo et
                         tenetur facere ipsam vitae similique beatae, odio distinctio veniam corporis? Possimus
                         aspernatur fuga mollitia debitis blanditiis voluptatibus voluptates quisquam repellat
                         perspiciatis recusandae. Iure!</p>
-                    <a href="#" class="section__btn">Read More</a>
+                        <div class="section__btn-container">
+                            <a href="#" class="section__btn">Read More</a>
+                        </div>
                 </div>
                 <div class="blog-preview__container-2">
                     <img src="./img/home-image-4.jpg" alt="" class="blog-preview__img-2">
