--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
                 </div>
             </div>
         </section>
+
         <section class="building-pic">
         </section>
+
         <section class="section icon-sec">
             <div class="wrapper icon-sec__block">
                 <div class="icon-sec__container">
@@ -68,6 +70,7 @@
                         </p>
                     </div>
                 </div>
+
                 <div class="icon-sec__container">
                     <div class="icon-sec__icon-container">
                         <a href="#about" class="icon-sec__link">
@@ -124,20 +127,23 @@
                 </div>
             </div>
         </section>
+
         <section class="section blog-preview">
             <div class="wrapper blog-preview__block">
                 <div class="blog-preview__container-1">
-                    <img src="./img/home-image-3.jpg" alt="" class="blog-preview__img-1">
+                    <img src="./img/home-image-3.jpg" alt="Photo of surfers in the ocean as the sun goes down" class="blog-preview__img-1">
                     <!-- <div class="blog-preview__img-1">
 
                     </div> -->
                 </div>
                 <div class="blog-preview__container-2 blog-preview__container-2--text">
                     <h3 class="font3">Harper's Travels</h3>
-                    <p class="section__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nemo et
+                    <p class="section__text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nemo et
                         tenetur facere ipsam vitae similique beatae, odio distinctio veniam corporis? Possimus
                         aspernatur fuga mollitia debitis blanditiis voluptatibus voluptates quisquam repellat
-                        perspiciatis recusandae. Iure!</p>
+                        perspiciatis recusandae. Iure!
+                    </p>
                     <a href="#" class="section__btn">Read More</a>
 
                 </div>
@@ -146,23 +152,63 @@
             <div class="wrapper blog-preview__block">
                 <div class="blog-preview__container-1 blog-preview__container-1--text">
                     <h3 class="font3">Favourite Things</h3>
-                    <p class="section__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nemo et
+                    <p class="section__text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nemo et
                         tenetur facere ipsam vitae similique beatae, odio distinctio veniam corporis? Possimus
                         aspernatur fuga mollitia debitis blanditiis voluptatibus voluptates quisquam repellat
-                        perspiciatis recusandae. Iure!</p>
+                        perspiciatis recusandae. Iure!
+                    </p>
                         <div class="section__btn-container">
                             <a href="#" class="section__btn">Read More</a>
                         </div>
                 </div>
                 <div class="blog-preview__container-2">
-                    <img src="./img/home-image-4.jpg" alt="" class="blog-preview__img-2">
+                    <img src="./img/home-image-4.jpg" alt="Photo of red brick industrial building" class="blog-preview__img-2">
                 </div>
             </div>
         </section>
-        <section class="section harperjourney">
 
+        <section class="section harperjourney" id="about">
+            <div class="harperjourney__container wrapper">
+                <div class="harperjourney__photo-container">
+                    <img src="./img/home-image-5.jpg" alt="Photo of Harper" class="harperjourney__photo">
+                </div>
+                <div class="harperjourney__text-container">
+                    <h2 class="font2">Harper's Journey</h2>
+                    <p class="section__text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta neque odio dolorem at impedit velit, amet quisquam libero possimus, accusantium dolores ipsum nesciunt eligendi, repellendus sequi voluptatem assumenda minima dolorum recusandae. Libero ut inventore vero sed quaerat adipisci labore voluptatibus quia deleniti! Hic totam consequuntur repellendus eos, laborum consectetur. Ex tempora accusamus vel doloribus?
+                    </p>
+
+                    <a href="#" class="section__btn">Find Out More</a>
+
+                </div>
+            </div>
+        </section>
+        <section class="section photos" id="photos">
+            <ul class="photos__container wrapper">
+                <li class="photos__item">
+                    <a href="" class="photos__link">
+                        <img src="./img/home-image-6.jpg" alt="Photo of pink building" class="photos__photo">
+                    </a>
+                </li>
+                <li class="photos__item">
+                    <a href="" class="photos__link">
+                        <img src="./img/home-image-7.jpg" alt="Photo of flying plane" class="photos__photo">
+                    </a>
+                </li>
+                <li class="photos__item">
+                    <a href="" class="photos__link">
+                        <img src="./img/home-image-8.jpg" alt="" class="photos__photo">
+                    </a>
+                </li>
+            </ul>
         </section>
     </main>
+    <footer class="footer">
+        <p class="wrapper footer__text">
+            Copyright © 2018 HackerYou
+        </p>
+    </footer>
 
 </body>
 
