--- a/index.html
+++ b/index.html
@@ -16,13 +16,23 @@
     <header class="header">
         <nav class="nav wrapper">
             <ul class="nav__list">
-                <li class="nav__item"><a href="" class="nav__link--active">Home</a></li>
-                <li class="nav__item"><a href="" class="nav__link">About</a></li>
-                <li class="nav__item"><a href="" class="nav__link">
+                <li class="nav__item">
+                    <a href="./index.html" class="nav__link nav__link--active">Home</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#about" class="nav__link">About</a>
+                </li>
+                <li class="nav__item">
+                    <a href="./index.html" class="nav__link">
                         <h2 class="font2--nav">Harper</h2>
-                    </a></li>
-                <li class="nav__item"><a href="" class="nav__link">Blog</a></li>
-                <li class="nav__item"><a href="" class="nav__link">Contact</a></li>
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="./blog.html" class="nav__link">Blog</a>
+                </li>
+                <li class="nav__item">
+                    <a href="./contact.html" class="nav__link">Contact</a>
+                </li>
             </ul>
         </nav>
         <div class="header__container1 wrapper">
