Made changes to Nav bar and Contact page. Started Blog page

--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <header class="header header--contact">
-        <nav class="nav nav--contact wrapper">
+    <header class="header header--other">
+        <nav class="nav nav--other wrapper">
             <ul class="nav__list">
                 <li class="nav__item">
                     <a href="./index.html" class="nav__link">Home</a>
@@ -24,14 +24,19 @@
                 </li>
                 <li class="nav__item"><a href="./index.html" class="nav__link">
                         <h2 class="font2--nav">Harper</h2>
-                    </a></li>
-                <li class="nav__item"><a href="./blog.html" class="nav__link">Blog</a></li>
-                <li class="nav__item"><a href="./contact.html" class="nav__link nav__link--active">Contact</a></li>
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="./blog.html" class="nav__link">Blog</a>
+                </li>
+                <li class="nav__item">
+                    <a href="./contact.html" class="nav__link nav__link--active">Contact</a>
+                </li>
             </ul>
         </nav>
-        <div class="header__contact-container">
-            <div class=" wrapper header__contact-text-container">
-                <h1 class="font1 header__contact-text">Contact Me</h1>
+        <div class="header__other-container header__other-container--contact">
+            <div class="wrapper header__other-text-container">
+                <h1 class="font1 header__other-text">Contact Me</h1>
             </div>
         </div>
     </header>
