--- a/blog.html
+++ b/blog.html
@@ -1,14 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HARPER - Blog</title>
     <link href="https://fonts.googleapis.com/css?family=Cabin|Oswald:700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
-</head>
+
 <body>
-    
+    <header class="header header--other">
+        <nav class="nav nav--other wrapper">
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a href="./index.html" class="nav__link">Home</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#about" class="nav__link">About</a>
+                </li>
+                <li class="nav__item"><a href="./index.html" class="nav__link">
+                        <h2 class="font2--nav">Harper</h2>
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="./blog.html" class="nav__link nav__link--active">Blog</a>
+                </li>
+                <li class="nav__item">
+                    <a href="./contact.html" class="nav__link">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="header__other-container header__other-container--blog">
+            <div class="wrapper header__other-text-container">
+                <h1 class="font1 header__other-text">Blog</h1>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="section blog">
+            <div class="wrapper blog__container">
+                <aside class="blog__aside">
+                    <div class="blog__aside-box">
+                        <div class="blog__aside-img-container">
+                            <img src="./img/blog-image-2.jpg" alt="Woman in pink coat lying on a carpet next to a blue wall">
+                        </div>
+                        <h4 class="font4">About Harper</h4>
+                        <p class="blog__aside-text">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, cupiditate aspernatur harum veritatis possimus provident.
+                        </p>
+
+                    </div>
+                    <div class="blog__aside-box">
+                        <h4 class="font4">Recent Posts</h4>
+
+                        <ul class="blog__aside-list">
+                            <li class="blog__aside-post">
+                                <a href="">Lorem ipsum dolor sit.</a>
+                            </li>
+                            <li class="blog__aside-post">
+                                <a href="">Lorem ipsum dolor sit.</a>
+                            </li>
+                            <li class="blog__aside-post">
+                                <a href="">Lorem ipsum dolor sit.</a>
+                            </li>
+                            <li class="blog__aside-post">
+                                <a href="">Lorem ipsum dolor sit.</a>
+                            </li>
+                        </ul>
+
+                    </div>
+
+                </aside>
+                <div class="blog__post-container">
+
+                </div>
+
+            </div>
+
+        </section>
+    </main>
+
 </body>
+
 </html>
