Completed blog structure of blog page, not to start hover effect etc

--- a/blog.html
+++ b/blog.html
@@ -49,7 +49,8 @@
                         </div>
                         <h4 class="font4">About Harper</h4>
                         <p class="blog__aside-text">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, cupiditate aspernatur harum veritatis possimus provident.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, cupiditate aspernatur harum
+                            veritatis possimus provident.
                         </p>
 
                     </div>
@@ -58,16 +59,16 @@
 
                         <ul class="blog__aside-list">
                             <li class="blog__aside-post">
-                                <a href="">Lorem ipsum dolor sit.</a>
+                                <a href="#" class="blog__aside-link">Lorem ipsum dolor sit.</a>
                             </li>
                             <li class="blog__aside-post">
-                                <a href="">Lorem ipsum dolor sit.</a>
+                                <a href="#" class="blog__aside-link">Lorem ipsum dolor sit.</a>
                             </li>
                             <li class="blog__aside-post">
-                                <a href="">Lorem ipsum dolor sit.</a>
+                                <a href="#" class="blog__aside-link">Lorem ipsum dolor sit.</a>
                             </li>
                             <li class="blog__aside-post">
-                                <a href="">Lorem ipsum dolor sit.</a>
+                                <a href="#" class="blog__aside-link">Lorem ipsum dolor sit.</a>
                             </li>
                         </ul>
 
@@ -75,14 +76,115 @@
 
                 </aside>
                 <div class="blog__post-container">
+                    <div class="blog__post-box blog__post-box--border">
+                        <h4 class="font4">My favourite travel destinations</h4>
 
+                        <p class="blog__post-text">
+                            Monday October 8th, 2018 by Harper
+                        </p>
+                        <p class="blog__post-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, asperiores nam.
+                            Cupiditate ut nulla repellat mollitia omnis molestiae cum laborum perferendis explicabo
+                            quis? Exercitationem mollitia, adipisci voluptate distinctio vero iste nisi excepturi aut
+                            nemo reiciendis cupiditate.
+                        </p>
+
+                        <p class="blog__post-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur dolorem nam assumenda
+                            harum unde, necessitatibus quibusdam tenetur enim quidem similique. Ducimus sequi dolore
+                            eum iste cupiditate voluptas laudantium commodi, harum nesciunt eveniet iure dolorem
+                            numquam doloremque ipsa quibusdam sunt quia officia impedit autem. Architecto eos quos a!
+                        </p>
+                        <p class="blog__post-text">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos omnis voluptates laborum
+                            quaerat consectetur fuga consequuntur ipsa quidem, voluptatem eaque, recusandae adipisci
+                            sit asperiores aspernatur quia id quae a. Eveniet mollitia ab explicabo sunt unde labore
+                            corrupti vitae, placeat, harum deleniti veniam culpa iste odit beatae enim cupiditate
+                            pariatur facilis, assumenda aspernatur tenetur expedita dicta possimus iure! Quae aliquam
+                            omnis ad voluptatum facere dolores nemo dignissimos optio quo neque est natus maxime
+                            provident et delectus tempore tenetur sint, voluptates excepturi consequatur accusantium
+                            officia? Laboriosam eius nulla doloribus enim error, aperiam assumenda! Impedit possimus,
+                            eaque reprehenderit quae, unde eveniet nulla quos maiores et iusto eos, veniam eum?
+                            Recusandae doloribus quod velit dolores ducimus minima sit esse ipsam quibusdam dolorem?
+                            Recusandae.
+                        </p>
+
+                        <p class="blog__post-text">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia voluptatibus officia
+                            voluptates amet praesentium et. Dolor deserunt quam eum. Quisquam obcaecati enim magni
+                            laborum beatae quos laboriosam sint pariatur optio!
+                        </p>
+                        <p class="blog__post-text">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid dolores, delectus labore
+                            placeat, maxime iste commodi, asperiores repudiandae corporis eum eligendi natus minima
+                            obcaecati dolorum nostrum at sed. Omnis tempora eligendi illo ducimus aut doloribus
+                            sapiente tempore fugiat. Magni molestiae quidem fuga explicabo, dolores alias repellat
+                            quam!
+                        </p>
+                        <p class="blog__post-text">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis fuga perferendis,
+                            molestiae optio illum impedit consectetur inventore nihil eveniet ducimus provident nobis,
+                            vero beatae quibusdam neque magnam quo quasi? Officia aspernatur reiciendis, dolorum odit
+                            mollitia quos unde sit suscipit minus quas minima quo. Vero fuga quasi, aliquam molestias
+                            magni esse laborum, pariatur tempore vel deleniti harum praesentium nisi earum et commodi
+                            provident fugit nulla necessitatibus at explicabo ab corporis obcaecati. Ratione harum
+                            totam numquam blanditiis eum quis quibusdam, fugit ipsum! Corporis nisi accusantium impedit
+                            ea aliquam saepe, fugiat id cumque nulla reiciendis nobis sunt dolor autem minima magnam.
+                            Eveniet eum praesentium fuga, quos optio dolorem molestias tenetur consectetur ratione
+                            impedit aliquam quam quasi minima totam nisi illum excepturi corrupti facere!
+                        </p>
+                    </div>
+                    <div class="blog__post-box blog__post-box--author">
+                        <div class="blog__post-img-container">
+                            <img src="./img/blog-image-3.jpg" alt="Headshot of Maggie">
+                        </div>
+
+                        <p class="blog__post-text blog__post-text--author">
+                            <span class="blog__post-text-date ">Tuesday October 9th, 2018 by Maggie</span>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut iste earum nisi ad, sit
+                            eligendi quod quibusdam dolores debitis vel voluptatem distinctio id, obcaecati vitae
+                            dolore omnis molestiae perspiciatis! In dignissimos veritatis tempora alias ipsa!
+                        </p>
+                    </div>
+
+                    <div class="blog__post-box blog__post-box--author blog__post-box--border">
+                        <div class="blog__post-img-container">
+                            <img src="./img/blog-image-4.jpg" alt="Headshot of Maggie">
+                        </div>
+
+                        <p class="blog__post-text blog__post-text--author">
+                            <span class="blog__post-text-date ">Wednesday October 10th, 2018 by Daisy</span>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut iste earum nisi ad, sit
+                            eligendi quod quibusdam dolores debitis vel voluptatem distinctio id, obcaecati vitae
+                            dolore omnis molestiae perspiciatis! In dignissimos veritatis tempora alias ipsa!
+                        </p>
+                    </div>
+                    <div class="blog__post-box blog__post-box--form">
+
+                        <form action="#" method="POST" class="blog__post-form">
+                            <label class="visuallyhidden" for="email">Name</label>
+                            <input type="text" name="name" id="name" placeholder="Name" class="contact__info contact__item"
+                                required>
+
+                            <label class="visuallyhidden" for="email">Email</label>
+                            <input type="email" name="email" id="email" placeholder="Email Address" class="contact__info contact__item"
+                                required>
+
+                            <label class="visuallyhidden" for="email">Message</label>
+                            <textarea name="message" id="message" placeholder="Comment" class="contact__message contact__item"></textarea>
+
+                            <input type="submit" value="Post Comment" class="contact__submit contact__item">
+                        </form>
+                    </div>
                 </div>
-
             </div>
-
         </section>
     </main>
-
+    <footer class="footer">
+        <p class="wrapper footer__text">
+            Copyright © 2018 HackerYou
+        </p>
+    </footer>
 </body>
 
 </html>
